fix marginnotes: reserve space in layout instead of overflow

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -916,6 +916,7 @@ img[src*='#center'] {
 .post {
   max-width: 100%;
   min-width: 0;
+  padding-right: 220px;
 }
 
 .post-header-content {
@@ -988,7 +989,7 @@ img[src*='#center'] {
 .post-content .marginnote {
   float: right;
   clear: right;
-  margin-right: -240px;
+  margin-right: -220px;
   width: 200px;
   font-size: 13px;
   line-height: 1.5;
@@ -1022,7 +1023,10 @@ img[src*='#center'] {
   border-radius: 3px;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1200px) {
+  .post {
+    padding-right: 0;
+  }
   .post-content .marginnote {
     float: none;
     margin-right: 0;
